--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "semantic-test",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Semantic learning",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "semantic-release": "semantic-release"
   },
   "author": "Jianyu",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CalmJerome/semantic-test.git"
+  },
+  "devDependencies": {
+    "semantic-release": "^17.2.2"
+  }
 }
