--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,20 +2,20 @@ name: Release Drafter
 
 on:
   push:
-    # branches to consider in the event; optional, defaults to all
+    # branches to consider in the event; optional, defaults to all,只有在master分支发生push时间时，触发本workflow
     branches:
       - master
-	# 只有在master分支发生push时间时，触发本workflow
+
 jobs:
   update_release_draft:
     # 指定虚拟机环境，必填字段
     runs-on: ubuntu-latest
     steps:
-      # 指定每个job的运行步骤，包含一个或多少步骤
-      # Drafts your next Release notes as Pull Requests are merged into "master"
+      # 指定每个job的运行步骤，包含一个或多少步骤,Drafts your next Release notes as Pull Requests are merged into "master"
+     
       - uses: release-drafter/release-drafter@v5
         with:
           # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
-          # config-name: my-config.yml
+          config-name: release-drafter.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
