--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "semantic-test",
-  "version": "0.0.0-development",
+  "version": "0.0.0",
   "description": "Semantic learning",
   "main": "index.js",
   "scripts": {
