--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -14,8 +14,8 @@ jobs:
       # 指定每个job的运行步骤，包含一个或多少步骤,Drafts your next Release notes as Pull Requests are merged into "master"
      
       - uses: release-drafter/release-drafter@v5
-        with:
+        # with:
           # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
-          config-name: release-drafter.yml
+          # config-name: release-drafter.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
