--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,48 +1,40 @@
-name-template: 'v$RESOLVED_VERSION 🌈'
-tag-template: 'v$RESOLVED_VERSION'
+name-template: 'v$NEXT_MAJOR_VERSION'
+tag-template: 'v$NEXT_MAJOR_VERSION'
+prerelease: true
+exclude-labels:
+  - 'skip-changelog'
 categories:
   - title: '🚀 Features'
     labels:
+      - 'new-feature'
       - 'feature'
       - 'enhancement'
-  - title: '🐛 Bug Fixes'
+  - title: '🐛 Bug fixes'
     labels:
       - 'fix'
       - 'bugfix'
       - 'bug'
-  - title: '🧰 Maintenance'
-    label: 'chore'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
-change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
-version-resolver:
-  major:
+  - title: '🎨 CSS'
     labels:
-      - 'major'
-  minor:
+      - 'css'
+  - title: '☕️ JavaScript'
     labels:
-      - 'minor'
-  patch:
+      - 'js'
+  - title: '📖 Docs'
     labels:
-      - 'patch'
-  default: patch
+      - 'docs'
+  - title: '🌎 Accessibility'
+    labels:
+      - 'accessibility'
+  - title: '🧰 Misc'
+    labels:
+      - 'build'
+      - 'meta'
+      - 'chore'
+  - title: '📦 Dependencies'
+    labels:
+      - 'dependencies'
+change-template: '- #$NUMBER: $TITLE'
 template: |
   ## Changes
-
   $CHANGES
-no-changes-template:
-  '* No any changes'
-~
-~
-~
-~
-~
-~
-~
-~
-~
-~
-~
-~
-~
-~
-
