--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,11 @@ jobs:
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-	python-version: '3.7'
-
+        # Semantic version range syntax or exact version of a Python version
+        python-version: '3.7' 
+        # Optional - x64 or x86 architecture, defaults to x64
+        architecture: 'x64' 
+       
     - name: Display Python version
       run: python -c "import sys; print(sys.version)" 
     
