--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,3 +1,23 @@
-{
-"branches": ["master", "next"]
-}
+branches:
+  - release
+
+plugins:
+  - - "@semantic-release/commit-analyzer"
+    - preset: angular
+      releaseRules:
+        - type: docs
+          scope: README
+          release: patch
+        - type: refactor
+          release: patch
+        - type: style
+          release: patch
+      parserOpts:
+        noteKeywords:
+          - BREAKING CHANGE
+          - BREAKING CHANGES
+  - "@semantic-release/release-notes-generator"
+  - "@semantic-release/npm"
+  - "@semantic-release/github"
+
+
